--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
     body {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
+        font-size: 20px;
         background-color: #b3b3b3;
         height: 100%;
         min-height: 100%;
@@ -13,18 +13,15 @@
     }
     
     .jumbotron {
-        height: 15%;
-        padding-top: 15px;
-        padding-left: 5px;
-        padding-right: 5px;
-        padding-bottom: 10px;
+        height: 8%;
+        padding-top: 2px;
+        padding-bottom: 2px;
         background-color: #5c8a8a;
     }
     
     .jumbo-hdr {
         margin: 0px auto;
-        height: 12%;
-        font-size: 18px;
+        height: 8%;
     }
     
     .container-fluid {
@@ -45,7 +42,7 @@
         background-color: #5c8a8a;
     }
     
-    .player-identity {
+    #player-identity {
         margin: 0px auto;
         height: 12%;
         font-weight: 600;
@@ -54,14 +51,14 @@
     #player-info {
         margin: 0px auto;
         height: 12%;
-        color: #5c8a8a;
+        color: #ff00ff;
         font-weight: 700;
     }
     
     #game-result {
         font-size: 50px;
         font-weight: 800;
-        line-height: 240%;
+        line-height: 170%;
     }
     
     .player {
@@ -76,6 +73,7 @@
     
     #chat-display {
         margin: 40px auto;
+        margin-top: 15px;
         margin-bottom: 2px;
         height: 150px;
         width: 70%;
@@ -109,10 +107,12 @@
     .btn {
         margin: 5px;
         height: 40px;
-        width: 70px;
+        width: 85px;
         border-color: #5c8a8a;
         background-color: #5c8a8a;
         color: #ffffff;
+        font-weight: 700;
+        font-size: 20px;
     }
     
     ul {
@@ -139,6 +139,6 @@
     }
     
     .row {
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin-top: 8px;
+        margin-bottom: 8px;
     }
