--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,13 +76,13 @@
         margin-top: 15px;
         margin-bottom: 2px;
         height: 150px;
-        width: 70%;
+        width: 72%;
         background: #ffffff;
     }
     
     .chat-message {
         margin: 40px auto;
-        margin-top: 2px;
+        margin-top: 1px;
         height: 50px;
         width: 70%;
     }
@@ -91,28 +91,61 @@
         float: left;
         margin: 40px auto;
         margin-top: 2px;
-        height: 50px;
+        height: 40px;
         width: 90%;
         background: #ffffff;
     }
     
     .send-button {
         float: right;
-        margin: 40px auto;
-        margin-top: 2px;
-        height: 60px;
+        margin-top: 1px;
+        height: 50px;
         width: 10%;
     }
     
     .btn {
         margin: 5px;
-        height: 40px;
+        height: 38px;
         width: 85px;
+        padding-top: 5px;
+        padding-bottom: 7px;
         border-color: #5c8a8a;
         background-color: #5c8a8a;
         color: #ffffff;
         font-weight: 700;
         font-size: 20px;
+    }
+    
+    #message-display {
+        width: 100%;
+        height: 150px;
+        padding: 2px 10px 2px 10px;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        background-color: #f8f8f8;
+        font-size: 16px;
+        resize: none;
+    }
+    
+    #message {
+        width: 100%;
+        height: 40px;
+        padding: 2px 10px 2px 10px;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        background-color: #f8f8f8;
+        font-size: 16px;
+        resize: none;
+    }
+    
+    #message:active {
+        border: 2px solid #5c8a8a;
+    }
+    
+    button#msg-btn.btn {
+        margin-top: 2px;
     }
     
     ul {
